[gd_scene load_steps=7 format=2]

[ext_resource path="res://LieraSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Level/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Sprites/echobar.png" type="Texture" id=4]
[ext_resource path="res://Sprites/echobarBG.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
Level1 = ExtResource( 2 )

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="WinPanel" type="PanelContainer" parent="GameUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="GameUI/WinPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 194.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="GameUI/WinPanel/GridContainer"]
margin_right = 187.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Level Complete!"

[node name="PlayAgainButton" type="Button" parent="GameUI/WinPanel/GridContainer"]
margin_top = 35.0
margin_right = 187.0
margin_bottom = 55.0
text = "Play Again"

[node name="ExitButton" type="Button" parent="GameUI/WinPanel/GridContainer"]
margin_top = 59.0
margin_right = 187.0
margin_bottom = 79.0
text = "Exit Game"

[node name="PlayerUI" type="GridContainer" parent="GameUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="GameUI/PlayerUI"]
margin_right = 192.0
margin_bottom = 32.0
max_value = 96.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )

[node name="Tween" type="Tween" parent="GameUI"]
[connection signal="pressed" from="GameUI/WinPanel/GridContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="GameUI/WinPanel/GridContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
